# WATTx-testnet

./: .gitignore  CMakeLists.txt  README.md
contrib/: README.md  (+2 more)
src/: CMakeLists.txt  bitcoin-cli-res.rc  bitcoin-cli.cpp  bitcoin-tx-res.rc  bitcoin-tx.cpp  bitcoin-util-res.rc  bitcoin-util.cpp  bitcoin-wallet-res.rc  bitcoin-wallet.cpp  bitcoind-res.rc  bitcoind.cpp  blockencodings.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsseeds.h  clientversion.cpp  clientversion.h  coins.cpp  coins.h  external_signer.cpp  headerssync.cpp  httprpc.cpp  httpserver.cpp  httpserver.h  init.cpp  init.h  key_io.cpp  logging.cpp  logging.h  net.cpp  net.h  net_processing.cpp  net_processing.h  netbase.cpp  pos.cpp  pos.h  pow.cpp  pow.h  (+12 more)
src/bench/: CMakeLists.txt  bench_bitcoin.cpp  block_assemble.cpp  checkblock.cpp  duplicate_inputs.cpp  index_blockfilter.cpp  load_external.cpp  logging.cpp  mempool_stress.cpp  readwriteblock.cpp  rpc_blockchain.cpp  sign_transaction.cpp  strencodings.cpp  wallet_balance.cpp  wallet_create_tx.cpp
src/blst/: CMakeLists.txt
src/common/: args.cpp  args.h  system.cpp  system.h
src/consensus/: merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: muhash.cpp  muhash.h
src/cryptopp/: CMakeLists.txt
src/index/: coinstatsindex.cpp
src/init/: bitcoin-gui.cpp  bitcoin-node.cpp  common.cpp
src/interfaces/: chain.h  mining.h  node.h
src/ipc/: interfaces.cpp  process.cpp
src/kernel/: CMakeLists.txt  chainparams.cpp  chainparams.h  chainstatemanager_opts.h
src/libff/: CMakeLists.txt
src/node/: blockstorage.cpp  blockstorage.h  caches.cpp  chainstate.cpp  chainstate.h  interfaces.cpp  miner.cpp  miner.h  protocol_version.h  transaction.cpp
src/policy/: feerate.h  fees.cpp  policy.cpp  policy.h
src/qt/: CMakeLists.txt  README.md  adddelegationpage.cpp  addressbookpage.cpp  addresstablemodel.cpp  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoin.cpp  bitcoin.h  bitcoinamountfield.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinstrings.cpp  bitcoinunits.cpp  bitcoinunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  createcontract.cpp  createwalletdialog.cpp  delegationitemmodel.cpp  delegationitemwidget.cpp  delegationlistwidget.cpp  delegationpage.cpp  delegationsstakerdialog.cpp  delegationstakeritemmodel.cpp  guiconstants.h  guiutil.cpp  guiutil.h  hardwarekeystoredialog.cpp  hardwaresigntx.cpp  hardwaresigntxdialog.cpp  intro.cpp  main.cpp  modaloverlay.cpp  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  overviewpage.h  qrimagewidget.cpp  (+49 more)
src/qt/forms/: debugwindow.ui  optionsdialog.ui  receiverequestdialog.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_am.ts  bitcoin_ar.ts  bitcoin_ast_ES.ts  bitcoin_ay.ts  bitcoin_az.ts  bitcoin_az@latin.ts  bitcoin_be.ts  bitcoin_bg.ts  bitcoin_bn.ts  bitcoin_br.ts  bitcoin_bs.ts  bitcoin_ca.ts  bitcoin_cmn.ts  bitcoin_cs.ts  bitcoin_cy.ts  bitcoin_da.ts  bitcoin_de.ts  bitcoin_de_AT.ts  bitcoin_de_CH.ts  bitcoin_el.ts  bitcoin_en.ts  bitcoin_en.xlf  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_CO.ts  bitcoin_es_DO.ts  bitcoin_es_SV.ts  bitcoin_es_VE.ts  bitcoin_et.ts  bitcoin_eu.ts  bitcoin_fa.ts  bitcoin_fi.ts  bitcoin_fil.ts  bitcoin_fo.ts  bitcoin_fr.ts  bitcoin_ga.ts  bitcoin_ga_IE.ts  bitcoin_gl.ts  bitcoin_gl_ES.ts  (+75 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/test/: CMakeLists.txt  addressbooktests.cpp  apptests.cpp  rpcnestedtests.cpp  test_main.cpp  wallettests.cpp
src/rpc/: blockchain.cpp  client.cpp  contract_util.cpp  contract_util.h  external_signer.cpp  mempool.cpp  mining.cpp  net.cpp  node.cpp  output_script.cpp  rawtransaction.cpp  register.h  request.cpp  server.cpp  server.h  util.cpp  util.h  validators.cpp  validators.h
src/script/: descriptor.cpp  interpreter.cpp  interpreter.h  script.h  sign.cpp  sign.h  solver.h
src/secp256k1/: Makefile.am
src/secp256k1/include/: secp256k1_sha256.h
src/secp256k1/src/: CMakeLists.txt  hash_impl.h  selftest.h  testrand_impl.h
src/test/: CMakeLists.txt  README.md  bip324_tests.cpp  blockencodings_tests.cpp  blockmanager_tests.cpp  bloom_tests.cpp  coins_tests.cpp  coinstatsindex_tests.cpp  compress_tests.cpp  denialofservice_tests.cpp  descriptor_tests.cpp  key_io_tests.cpp  key_tests.cpp  logging_tests.cpp  mempool_tests.cpp  miner_tests.cpp  net_peer_connection_tests.cpp  net_tests.cpp  peerman_tests.cpp  pow_tests.cpp  rbf_tests.cpp  rpc_tests.cpp  script_p2sh_tests.cpp  script_standard_tests.cpp  script_tests.cpp  transaction_tests.cpp  txpackage_tests.cpp  txvalidation_tests.cpp  util_tests.cpp  validation_block_tests.cpp  validation_chainstate_tests.cpp  validation_chainstatemanager_tests.cpp  validation_flush_tests.cpp  versionbits_tests.cpp
src/test/data/: base58_encode_decode.json
src/test/fuzz/: addrman.cpp  coins_view.cpp  integer.cpp  key.cpp  message.cpp  mini_miner.cpp  p2p_handshake.cpp  p2p_transport_serialization.cpp  package_eval.cpp  partially_downloaded_block.cpp  pow.cpp  process_message.cpp  process_messages.cpp  script_format.cpp  script_sign.cpp  transaction.cpp  tx_pool.cpp  utxo_snapshot.cpp  utxo_total_supply.cpp
src/test/qtumtests/: bls_tests.cpp  btcecrecoverfork_tests.cpp  bytecodeexec_tests.cpp  cancunfork_tests.cpp  condensingtransaction_tests.cpp  constantinoplefork_tests.cpp  delegations_tests.cpp  dgp_tests.cpp  evmone_tests.cpp  istanbulfork_tests.cpp  kzg_tests.cpp  londonfork_tests.cpp  pectrafork_tests.cpp  precompiled_utils.h  qtumtxconverter_tests.cpp  shanghaifork_tests.cpp
src/trust/: CMakeLists.txt  heartbeat_net.cpp  heartbeat_net.h  trustscore.cpp  trustscore.h
src/util/: fs_helpers.cpp  strencodings.cpp  strencodings.h  time.cpp
src/validators/: CMakeLists.txt  delegation.cpp  delegation.h  validatordb.cpp  validatordb.h
src/wallet/: CMakeLists.txt  bdb.cpp  coinselection.cpp  external_signer_scriptpubkeyman.cpp  init.cpp  interfaces.cpp  load.cpp  salvage.cpp  scriptpubkeyman.cpp  scriptpubkeyman.h  spend.cpp  spend.h  stake.cpp  wallet.cpp  wallet.h  walletdb.cpp  walletdb.h  wallettool.cpp  walletutil.cpp
(+297 files in other folders)
